@@ -2,3 +2,9 @@ aplwrap
 =======
 
 A GTK+-based wrapper for GNU APL
+
+GTK+ version 3.10 or later is recommended.
+
+GTK+ version 3.8 or later is required.
+
+Some aplwrap features may not be present with GTK+ versions earlier than 3.10.
