@@ -16,7 +16,7 @@ AC_CONFIG_HEADERS([config.h])
 
 AM_MAINTAINER_MODE([enable])
 
-PKG_CHECK_MODULES([GTK],   [gtk+-3.0 >= 3.0.12])
+PKG_CHECK_MODULES([GTK],   [gtk+-3.0 >= 3.8])
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 
